--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script src="app.js" charset="utf-8"></script>
 </head>
 <body>
-    <h1>Qonita's mini memory game!</h1>
-    <h3 class="scoreText">Score: <span id="result"></span></h3>
+    <h1>QONITA'S MINI MEMORY GAME</h1>
+    <h3 class="scoreText">SCORE: <span id="result"></span></h3>
 
     <div class="grid">
 
