--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="app.js" charset="utf-8"></script>
 </head>
 <body>
-    <h1>QONITA'S WEEB MEMORY GAME</h1>
+    <h1>QONITA'S ANIME CHARACTERS MEMORY GAME</h1>
     <h3 class="scoreText">SCORE: <span id="result"></span></h3>
 
     <div class="grid">
